infrastructure/envoy/envoy.yaml
static_resources:
  listeners:
    - name: api-proxy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                tracing:
                  spawn_upstream_span: true
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: otel-collector
                      service_name: envoy-gateway
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "api.*"
                      routes:
                        - match:
                            prefix: "/todos"
                          route:
                            cluster: todoservice-envoy
                    - name: auth
                      domains:
                        - "auth.*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: auth
                    - name: dashboards
                      domains:
                        - "dashboards.*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grafana
                    - name: tracing
                      domains:
                        - "tracing.*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: tracing
                http_filters:
                  - name: envoy.filters.http.jwt_auth
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        auth-todo:
                          issuer: https://auth.localhost:8080/realms/test-realm
                          remote_jwks:
                            http_uri:
                              uri: https://auth:8443/realms/test-realm/protocol/openid-connect/certs
                              cluster: auth
                              timeout: 1s
                      rules:
                        - match:
                            path_match_policy:
                              name: health-match
                              typed_config:
                                "@type": type.googleapis.com/envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig
                                path_template: "/*/health"
                        - match:
                            prefix: "/todos"
                          requires:
                            provider_name: auth-todo
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /certs/external_localhost.pem
                    private_key:
                      filename: /certs/external_localhost.key

    # - name: postgres
    #   address:
    #     socket_address:
    #       protocol: TCP
    #       address: 0.0.0.0
    #       port_value: 5432
    #   filter_chains:
    #     - filters:
    #         - name: envoy.filters.network.postgres_proxy
    #           typed_config:
    #             "@type": type.googleapis.com/envoy.extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
    #             stat_prefix: egress_postgres
    #         - name: envoy.filters.network.tcp_proxy
    #           typed_config:
    #             "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
    #             stat_prefix: postgres_tcp
    #             cluster: auth-db

  clusters:
    - name: todoservice-envoy
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: todoservice-envoy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: todo-proxy
                      port_value: 8000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /certs/upstream_localhost.pem
                private_key:
                  filename: /certs/upstream_localhost.key

    - name: auth-db
      type: STRICT_DNS
      load_assignment:
        cluster_name: auth-db
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-db
                      port_value: 5432

    - name: auth
      type: STRICT_DNS
      load_assignment:
        cluster_name: auth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth
                      port_value: 8443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: auth

    - name: grafana
      type: STRICT_DNS
      load_assignment:
        cluster_name: grafana
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: grafana
                      port_value: 3000

    - name: tracing
      type: STRICT_DNS
      load_assignment:
        cluster_name: tracing
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: tracing
                      port_value: 16686

    - name: otel-collector
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: otel-collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
